# SapphireHook

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CommandInterface.cpp  CommandInterface.h  CppProperties.json  DebugCommandsModule.cpp  DebugCommandsModule.h  Doxyfile  FunctionCallMonitor.cpp  FunctionCallMonitor.h  FunctionDatabase.cpp  FunctionDatabase.h  IPCCommandsModule.cpp  IPCCommandsModule.h  README.md  Resources.rc  SapphireHookDLL.sln  SapphireHookDLL.vcxproj  SignatureDatabase.cpp  SignatureDatabase.h  UIManager.cpp  UIManager.h  UIModule.h  WindowsAPIWrapper.cpp  copilot-instructions.md  data-sig.yml  data.yml  dllmain.cpp  hook_manager.cpp  hook_manager.h  imgui_overlay.cpp  imgui_overlay.h  packages.config  patternscanner.cpp  patternscanner.h  resource.h  suspected_opcodes.txt  vcpkg.json
.github/workflows/: doxygen-pages.yml
SapphireHookInjector/: SapphireHookInjector.vcxproj  SapphireHookInjector.vcxproj.filters  injector.cpp  packages.config
data/: actions.json  classjobs.json  compare_signatures.py  data-sig-old.json  data-sig.json  data.json  data.yml  items.json  structs.yml  territories.json
docs/: ARCHITECTURE.md  BUILD_AND_RUN.md  DOXYGEN.md  DebugVisualClient.h  MODULE_REFERENCE.md  README.md  SAFETY.md  STRUCT_OPCODE_VERIFICATION.md  TEMPLATE_FAMILY_STRATEGY.md  TROUBLESHOOTING.md  Weather.csv
injector/: injector.cpp  run_injector_admin.bat
notes/: data.yml  parse_functions.py
resources/: Hashlist.rc  Resources.h
src/Analysis/: FunctionScanner.cpp  FunctionScanner.h  PatternScanner.cpp  PatternScanner.cpp.bak  PatternScanner.h  ScanEnrichment.cpp  ScanEnrichment.h
src/Core/: ActorControlEnums.h  AsyncPatternScanner.cpp  AsyncPatternScanner.h  CommandInvoker.cpp  CommandInvoker.h  FunctionAnalyzer.cpp  FunctionAnalyzer.h  FunctionCallMonitor.cpp  FunctionCallMonitor.h  FunctionDatabase.cpp  FunctionDatabase.h  FunctionScanner.cpp  FunctionScanner.h  GameData.cpp  GameData.h  GameDataLookup.cpp  GameDataLookup.cpp.bak  GameDataLookup.h  LibraryIntegration.h  NavMeshManager.cpp  NavMeshManager.h  PacketInjector.cpp  PacketInjector.h  ResourceLoader.cpp  ResourceLoader.h  RttiVTableFinder.cpp  RttiVTableFinder.h  SafeMemory.cpp  SafeMemory.h  ServiceManager.h  SettingsManager.cpp  SettingsManager.h  SignatureDatabase.cpp  SignatureDatabase.h  SignatureScanner.h  SimpleJSON.cpp  SimpleJSON.h  TerritoryScanner.cpp  TerritoryScanner.h  WindowsAPIWrapper.cpp  (+10 more)
src/Entry/: dllmain.cpp
src/Helper/: CapstoneWrapper.cpp  CapstoneWrapper.h  WindowsAPIWrapper.cpp  WindowsApiWrapper.h
src/Hooking/: HookParameterDecoder.cpp  HookParameterDecoder.h  MatrixCaptureHooks.cpp  MatrixCaptureHooks.h  NetworkHooks.cpp  NetworkHooks.h  dynamic_hook_engine.cpp  dynamic_hook_engine.h  hook_factory_impl.h  hook_manager.cpp  hook_manager.h  lua_hook.cpp  lua_hook.h
src/Logger/: Logger.cpp  Logger.h
src/Modules/: CharacterEdit.cpp  CharacterEdit.h  CollisionOverlayModule.cpp  CollisionOverlayModule.h  CommandInterface.cpp  CommandInterface.h  DebugCommandsModule.cpp  DebugCommandsModule.h  DebugVisualsModule.cpp  DebugVisualsModule.h  FunctionCallMonitor.cpp  FunctionCallMonitor.h  GMCommandList.h  GMCommandsModule.cpp  GMCommandsModule.h  IPCCommandsModule.cpp  IPCCommandsModule.h  LuaGameScriptModule.cpp  LuaGameScriptModule.h  MemoryViewerModule.cpp  MemoryViewerModule.h  NetDiagnosticsModule.cpp  NetDiagnosticsModule.h  NetworkHooksModule.cpp  NetworkHooksModule.h  NetworkMonitorModule.cpp  NetworkMonitorModule.h  PacketSenderModule.cpp  PacketSenderModule.h  RetainerCacheInspectorModule.cpp  RetainerCacheInspectorModule.h  SettingsModule.cpp  SettingsModule.h  SignatureScannerModule.cpp  SignatureScannerModule.h  Weather.cpp  Weather.h  WorldOverlayModule.cpp  WorldOverlayModule.h  ZoneLayoutViewerModule.cpp  (+1 more)
src/Monitor/: NetworkMonitor.cpp  NetworkMonitor.h  NetworkMonitorHelper.cpp  NetworkMonitorHelper.h  NetworkMonitorTypes.h  OpcodeNames.cpp  OpcodeNames.h  PacketEvents.h
src/Network/: GameEnums.cpp  GameEnums.h  OpcodeNames.cpp  OpcodeNames.h  PacketDatabase.cpp  PacketDatabase.h  PacketDecoder.cpp  PacketDecoder.h  PacketRegistration.Chat.cpp  PacketRegistration.Generic.cpp  PacketRegistration.Init.cpp  PacketRegistration.Lobby.cpp  PacketRegistration.Macros.h  PacketRegistration.Zone.cpp  PacketRegistration.cpp  PacketRegistration.h  PacketTable.Chat.h  PacketTable.Lobby.h  PacketTable.Zone.h
src/ProtocolHandlers/: CommonTypes.h
src/ProtocolHandlers/Chat/: ServerChatDef.h
src/ProtocolHandlers/Lobby/: ClientLobbyDef.h  ServerLobbyDef.h
src/ProtocolHandlers/Zone/: ClientZoneDef.h  ServerZoneDef.h
src/Tools/: ActorTracker.cpp  ActorTracker.h  CollisionMeshLoader.cpp  CollisionMeshLoader.h  D3D11MatrixCapture.cpp  D3D11MatrixCapture.h  DebugRenderer.cpp  DebugRenderer.h  DebugVisualServer.cpp  DebugVisualServer.h  DebugVisualTypes.h  GameCameraExtractor.cpp  GameCameraExtractor.h  LiveTraceMonitor.cpp  LiveTraceMonitor.h  LuaGameScriptScanner.cpp  LuaGameScriptScanner.h  MemoryScanner.cpp  MemoryScanner.h  NavMeshLoader.cpp  NavMeshLoader.h  SqPackReader.cpp  SqPackReader.h  StringXrefAnalyzer.cpp  StringXrefAnalyzer.h  ViewProjectionHook.cpp  ViewProjectionHook.h
src/UI/: NotificationSystem.h  UIManager.cpp  UIManager.h  UIModule.h  imgui_overlay.cpp
